add projectCard component

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,35 +1,35 @@
 [
-    {"img": "../images/viewBatata.png",
+    {"img": "viewBatata.png",
     "title":"BataBite",
     "description":"Langing page | HTML CSS",
     "code":"https://github.com/lupeMorales/Bata-bite-mobil-first",
     "demo":"https://lupemorales.github.io/Bata-bite-mobil-first/"
     },
-    {"img": "../images/catchThePenguin.png",
+    {"img": "catchThePenguin.png",
     "title":"Catch the Penguin",
     "description":"Proyecto personal | VanillaJS CSS",
     "code":"https://github.com/lupeMorales/catch-the-penguin",
     "demo":"https://lupemorales.github.io/catch-the-penguin/"
     },
-    {"img": "../images/HPdesktop_view.png",
+    {"img": "HPdesktop_view.png",
     "title":"Harry Potter character finder",
     "description":"Buscador web con React",
     "code":"https://github.com/lupeMorales/Harry-Potter-character-finder",
     "demo":"https://lupemorales.github.io/Harry-Potter-character-finder/"
     },
-    {"img": "../images/HPdesktop_view.png",
+    {"img": "HPdesktop_view.png",
     "title":"Harry Potter character finder",
     "description":"Buscador web con React",
     "code":"https://github.com/lupeMorales/Harry-Potter-character-finder",
     "demo":"https://lupemorales.github.io/Harry-Potter-character-finder/"
     },
-    {"img": "../images/HPdesktop_view.png",
+    {"img": "HPdesktop_view.png",
     "title":"Profile Cards Generator",
     "description":"Proyecto colaborativo || Refactorizar código heredado con React y crear servidor con ExpressJS",
     "code":"https://github.com/lupeMorales/project-promo-q-module-4-team-2",
     "demo":"https://las-faraonas-awesome-card.herokuapp.com/"
     },
-    {"img": "../images/HPdesktop_view.png",
+    {"img": "HPdesktop_view.png",
     "title":"Profile Cards Generator",
     "description":"Proyecto colaborativo || Refactorizar código heredado con React y crear servidor con ExpressJS",
     "code":"https://github.com/lupeMorales/GUI-Java-piedra-papel-tijera",
